# cryptonice

./: .gitignore  docker-compose.yml
app/: alembic.ini  main.py
app/api/: api.py
app/api/route/: user.py
app/core/: auth.py  config.py  security.py
app/db/: base.py
app/db/migrations/: env.py
app/models/: user.py
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: api_server.py  main.py  stream_server.py
backend/app/api/route/: auth.py  user.py
backend/app/core/: auth.py  binance.py  binance_stream.py  cache.py  config.py  exchange.py  redis.py
backend/app/db/: base.py  database.py  session.py
backend/app/db/migrations/versions/: e47bb343a930_init.py  f4c4f9ad6dba_init.py
backend/app/models/: trade.py  user.py
backend/app/schemas/: user.py
frontend/: README.md  nuxt.config.js  package.json
frontend/components/: BotInfo.vue  Logo.vue  NetWorth.vue  TradeHistory.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
